updated java recipe

--- a/theia-java-docker/Dockerfile
+++ b/theia-java-docker/Dockerfile
@@ -1,27 +1,30 @@
+FROM abner/openjdk8u161-jdk-alpine as java-base
 
-FROM ibmcom/ibmjava:8-sdk as java-base
+FROM node:8-alpine
 
-FROM ibmcom/ibmnode:8
-COPY --from=java-base /opt/ibm/java /opt/ibm/java
+COPY --from=java-base /usr/lib/jvm/java-1.8-openjdk /usr/lib/jvm/java-1.8-openjdk
 
-ENV JAVA_HOME=/opt/ibm/java/jre \
-    PATH=/opt/ibm/java/jre/bin:$PATH
+ENV JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk/jre \
+    PATH=$PATH:/usr/lib/jvm/java-1.8-openjdk/jre/bin:/usr/lib/jvm/java-1.8-openjdk/bin
 
-RUN apt-get update && \
-  apt-get install -y curl apt-transport-https && \
-  curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
-  echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-  apt-get update && apt-get install -y yarn && \
-  rm -rf /var/lib/apt/lists/*
-
-RUN useradd --create-home theia
-WORKDIR /home/theia
-USER theia
-
+RUN apk add --no-cache make gcc g++ python
 ARG version=latest
+WORKDIR /home/theia
+
 ADD $version.package.json ./package.json
-RUN yarn --cache-folder ./ycache && rm -rf ./ycache
-RUN yarn theia build
+
+ENV GIT_SSL_NO_VERIFY=true
+
+RUN yarn && \
+    yarn theia build && \
+    rm -rf ./node_modules/electron && \
+    yarn cache clean
+
+FROM node:8-alpine
+RUN apk add --no-cache git openssh bash
+WORKDIR /home/theia
+COPY --from=0 /home/theia /home/theia
 EXPOSE 3000
 ENV SHELL /bin/bash
+ENV USE_LOCAL_GIT true
 ENTRYPOINT [ "yarn", "theia", "start", "/home/project", "--hostname=0.0.0.0" ]
